# aegis-invest-ai

./: .env.example  .gitattributes  .gitignore  DEVELOPMENT.md  Makefile  README.md  docker-compose.yml  render.yaml
backend/: .vercelignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: e49013c1633e_initial_schema.py
backend/api/: index.py
backend/app/: __init__.py  cli.py  config.py  database.py  logging.py  main.py
backend/app/api/: auth.py  backtests.py  broker.py  dashboard.py  deps.py  health.py  paper_trading.py  risk.py  router.py  settings_api.py  strategies.py
backend/app/models/: __init__.py  backtesting.py  base.py  config.py  market_data.py  trading.py
backend/app/repositories/: __init__.py
backend/app/schemas/: ai.py  broker.py  market_data.py  risk.py  strategy.py
backend/app/services/ai_analysis/: anthropic_provider.py  base.py  mock_provider.py  overlay.py  sanitize.py
backend/app/services/backtesting/: engine.py  metrics.py  runner.py
backend/app/services/broker/: alpaca_paper.py  base.py  factory.py  mock_broker.py
backend/app/services/execution/: engine.py  locks.py  rebalance.py  reconciliation.py
backend/app/utils/: ids.py  rate_limit.py  redaction.py  retry.py  security.py  timeutils.py
backend/app/workers/: scheduler.py
backend/tests/: conftest.py  helpers.py  test_ai.py  test_api.py  test_backtester.py  test_execution.py  test_indicators.py  test_invariants.py  test_metrics.py  test_quality.py  test_rebalance_workflow.py  test_risk_engine.py  test_security_utils.py  test_strategy.py
docs/: ARCHITECTURE.md  (+7 more)
(+41 files in other folders)
